--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     }
   },
   "require": {
-    "php": ">=7.2",
-    "hyperf/di": "2.1",
-    "hyperf/utils": "2.1"
+    "php": ">=8.0",
+    "hyperf/di": "3.*",
+    "hyperf/utils": "3.*"
   }
 }
